--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   </head>
 
   <body>
-    <script src="index.js"></script>
+
+<form>
+  <label>Name: <input type="text" id="nameId"/></label>
+  <br><br>
+  <label>Email: <input type="email",  id="emailId"></label>
+  <br><br>
+  <input type="submit" id="submit" value="submit"/>
+  </form>
+
+
+
+
+    <script src="./index.js"></script>
   </body>
 
 </html>
